# test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: parsing.h
libs/: CMakeLists.txt
libs/entities/: CMakeLists.txt
libs/entities/include/: entities.hpp
libs/entities/source/: entities.cpp
libs/parser/: CMakeLists.txt
libs/parser/include/: parsing.hpp
libs/parser/source/: parsing.cpp
libs/pattern/: CMakeLists.txt
libs/pattern/include/: pattern.h
src/: CMakeLists.txt  main.cpp  parsing.cpp
tests/: CMakeLists.txt
